--- a/Syllabus-2020.Rmd
+++ b/Syllabus-2020.Rmd
@@ -139,6 +139,8 @@ Use mathematical, computational, statistical, or formal reasoning (including rea
 
 - Homework/Participation: **25%** of your grade.
 
+A 90% score is guaranteed to receive at least an A-, 80% at least a B-, 70% at least a C-, and 60% at least a D-. Any score below 60% will correspond to an F. 
+
 ## Participation
 
 Participation will be determined using in-class activities and data collection. Most of the in-class activities will be group activities. You will receive your group/seating assignment on the first day of class. You will sit with your group throughout the semester. Group activities will primarily be from the chapter explorations and may be graded for completeness or correctness or both. If you do not finish the activity during class time, you must finish it outside of class. 
