--- a/slides/chapter-1-significance.Rmd
+++ b/slides/chapter-1-significance.Rmd
@@ -309,6 +309,8 @@ ggplot(data = tibble(x = x), aes(x = x)) +
 ---
 ## For next time
 
+- Ch. P HW and Exploration P.3 due January 20 at 6pm
+
 - Complete Exploration 1.1 and submit it on Canvas by January 20 (Monday) at 6pm
 
 - Read Section 1.2 of the textbook
@@ -1110,8 +1112,10 @@ ggplot(tbl) +
 .center[This is practice, so ask questions!]
 
 
-## Homework
+## Due dates
 
-- Exploration 1.2 is due at 6pm on Monday
+- Exploration 1.2 is due at 6pm on Monday, Jan 27
 
 - WileyPlus Chapter 1 Homework is due Feb 3 at 6pm
+
+- Quiz over Ch. P and Ch. 1 is due Feb 5 at 11:59 pm
