template update, handout ch 1.3

--- a/handouts/template.tex
+++ b/handouts/template.tex
@@ -250,6 +250,9 @@ $endif$
 $if(highlighting-macros)$
 $highlighting-macros$
 $endif$
+\usepackage{multirow,multicol}
+\usepackage{tabularx}
+
 $if(tables)$
 \usepackage{longtable,booktabs}
 $if(beamer)$
